fixed alignment

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2606,6 +2606,6 @@ body
     height: 30px
     left: 10px
   .top_line
-    top: -35px
+    top: -47px
   .bottom_line
-    bottom: -35px
+    bottom: -47px
